gcc/testsuite/rust/rustc/ui/parser/keyword-impl-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py impl'

fn main() {
    let impl = "foo"; // { dg-error "" "" { target *-*-* } }
}

